@@ -1,5 +1,6 @@
 Version 2.17
 ---------
+ * Add rpm package build for fedora 41 (#234)
 
 Version 2.16
 ---------
